--- a/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.webp" type="image/x-icon">
   <meta name="description" content="">
 
 
@@ -96,7 +96,7 @@
                                   <div class="row justify-content-center">
                                       <div class="col-12 col-lg-5">
                                           <div class="image-wrapper">
-                                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/01_sorgente_ascoltatore.png" alt="www.gabrielavelitch.com">
+                                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/01_sorgente_ascoltatore.webp" alt="www.gabrielavelitch.com">
                                               <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
                                           </div>
                                       </div>
@@ -160,7 +160,7 @@
                     <div class="row justify-content-center">
                         <div class="col-12 col-lg-5">
                             <div class="image-wrapper">
-                                <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/02_sistema.png" alt="www.gabrielavelitch.com">
+                                <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/02_sistema.webp" alt="www.gabrielavelitch.com">
                                 <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
                             </div>
                         </div>
