--- a/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.webp" type="image/x-icon">
   <meta name="description" content="">
 
 
@@ -97,7 +97,7 @@ Praticamente faccio una simmetria rispetto alla parete superiore.
 <div class="row justify-content-center">
   <div class="col-12 col-lg-5">
       <div class="image-wrapper">
-          <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/15_riflessioni_primo_ordine.png" alt="www.gabrielavelitch.com">
+          <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/15_riflessioni_primo_ordine.webp" alt="www.gabrielavelitch.com">
           <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Calcolo sorgente virtuale di primo ordine</p>
       </div>
   </div>
@@ -133,7 +133,7 @@ Le sorgenti virtuali del secondo ordine mi permettono di ricostruire il tracciat
 <div class="row justify-content-center">
 <div class="col-12 col-lg-5">
 <div class="image-wrapper">
-<img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/16_riflessioni_secondo_ordine.png" alt="www.gabrielavelitch.com">
+<img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/16_riflessioni_secondo_ordine.webp" alt="www.gabrielavelitch.com">
 <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Calcolo sorgente virtuale di secondo ordine</p>
 </div>
 </div>
@@ -170,7 +170,7 @@ Ricapitolando, quando accendiamo la sorgente, l'ascoltatore viene investito dal 
 <div class="row justify-content-center">
 <div class="col-12 col-lg-5">
 <div class="image-wrapper">
-<img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/18_frequency_cut_distance.png" alt="www.gabrielavelitch.com">
+<img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/18_frequency_cut_distance.webp" alt="www.gabrielavelitch.com">
 <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Calcolo per determinare la frequenza di taglio in base alla distanza</p>
 </div>
 </div>
