--- a/pages/learn/acustica_degli_spazi_musicali/02_01_modi_naturali_in_una_dimesione_spaziale.html
+++ b/pages/learn/acustica_degli_spazi_musicali/02_01_modi_naturali_in_una_dimesione_spaziale.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.webp" type="image/x-icon">
   <meta name="description" content="">
 
 
@@ -97,7 +97,7 @@
                   <div class="row justify-content-center">
                       <div class="col-12 col-lg-5">
                           <div class="image-wrapper">
-                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/04_I_modo_naturale.png" alt="www.gabrielavelitch.com">
+                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/04_I_modo_naturale.webp" alt="www.gabrielavelitch.com">
                               <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Primo modo naturale di una coppia di pareti riflettenti</p>
                           </div>
                       </div>
@@ -124,7 +124,7 @@
                         <div class="row justify-content-center">
                             <div class="col-12 col-lg-5">
                                 <div class="image-wrapper">
-                                    <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/04_II_modo_naturale.png" alt="www.gabrielavelitch.com">
+                                    <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/04_II_modo_naturale.webp" alt="www.gabrielavelitch.com">
                                     <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Secondo modo naturale di una coppia di pareti riflettenti</p>
                                 </div>
                             </div>
