--- a/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html
+++ b/pages/learn/acustica_degli_spazi_musicali/02_06_frequenza_di_schroeder.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.webp" type="image/x-icon">
   <meta name="description" content="">
 
 
@@ -98,7 +98,7 @@
                   <div class="row justify-content-center">
                       <div class="col-12 col-lg-5">
                           <div class="image-wrapper">
-                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/12_calcolo_frequenza_schroeder.png" alt="www.gabrielavelitch.com">
+                              <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/12_calcolo_frequenza_schroeder.webp" alt="www.gabrielavelitch.com">
                               <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
                           </div>
                       </div>
@@ -112,7 +112,7 @@
                         <div class="row justify-content-center">
                             <div class="col-12 col-lg-5">
                                 <div class="image-wrapper">
-                                    <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/13_esempio_calcolo_tempo_riverberazione.png" alt="www.gabrielavelitch.com">
+                                    <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/13_esempio_calcolo_tempo_riverberazione.webp" alt="www.gabrielavelitch.com">
                                     <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
                                 </div>
                             </div>
