--- a/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_01_ray_tracing.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.webp" type="image/x-icon">
   <meta name="description" content="">
 
 
@@ -81,7 +81,7 @@
 <div class="row justify-content-center">
   <div class="col-12 col-lg-5">
       <div class="image-wrapper">
-          <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/17_ray_tracing.png" alt="www.gabrielavelitch.com">
+          <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/17_ray_tracing.webp" alt="www.gabrielavelitch.com">
           <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing</p>
       </div>
   </div>
@@ -113,7 +113,7 @@
                   <div class="row justify-content-center">
                     <div class="col-12 col-lg-5">
                         <div class="image-wrapper">
-                            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/19_amray.png" alt="www.gabrielavelitch.com">
+                            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/19_amray.webp" alt="www.gabrielavelitch.com">
                             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Visualizzazione grafica dell'algoritmo di Ray Tracing</p>
                         </div>
                     </div>
