--- a/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.webp" type="image/x-icon">
+  <link rel="shortcut icon" href="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" type="image/x-icon">
   <meta name="description" content="">
 
 
   <title>Approccio Statistico</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
-
+  <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/parallax/jarallax.css">
@@ -81,7 +81,7 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Questo aproccio parte dal fatto che l'energia in uno spazio sia distribuita in modo ergodico, ovvero senza particolari organizzazioni interne.
+                    Terzo approccio di analisi che parte dal fatto che l'energia in uno spazio sia distribuita in modo ergotico, ovvero senza particolari organizzazioni interne.
                     La descrizione di una risposta acustica in questi termini usa delle grandezze che riassumono in maniera macroscopica lo spazio, e ci definiscono determinate proprietà.
                     Uno dei primi studi fu quello del tempo di riverbero, ovvero di una relazione che permettesse di ricavare un parametro importante come il riverbero attraverso parametri complessivi dello spazio.
                     La formula in questione è la <b>formula di Sabine</b>.
