--- a/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html
+++ b/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html
@@ -12,7 +12,7 @@
   <title>Sorgenti Virtuali</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
- 
+ <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/parallax/jarallax.css">
