--- a/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html
@@ -83,8 +83,10 @@
                   <p class="mbr-text mbr-fonts-style display-7">
                     Terzo approccio di analisi che parte dal fatto che l'energia in uno spazio sia distribuita in modo ergotico, ovvero senza particolari organizzazioni interne.
                     La descrizione di una risposta acustica in questi termini usa delle grandezze che riassumono in maniera macroscopica lo spazio, e ci definiscono determinate proprietà.
+                    <br>
+                    <br>
                     Uno dei primi studi fu quello del tempo di riverbero, ovvero di una relazione che permettesse di ricavare un parametro importante come il riverbero attraverso parametri complessivi dello spazio.
-                    La formula in questione è la <b>formula di Sabine</b>.
+                    La formula in questione è la <b>formula di Sabine</b>, di cui vedremo esiti e risultati finali.
                   </p>
                 </div>
             </div>
