--- a/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
@@ -80,8 +80,25 @@
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">RT60 = (0.16 s/m) V/Se</h3>
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    <br>
+                    <br>
+                    V = volume
+                    Se = superficie di assorbimento efficace (ovvero la somma di tutte le superfici di assorbimento pesate con il loro coefficente di assorbimento)
+                    <br>
+                    <br>
+                    (m^3/m^2) * s/m = s
+                    <br>
+                    <br>
+                    RT60 è definito da un rapporto tra un volume e una superficie.
+                    <br>
+                    <br>
+                    Il contributo dato da Sabine è stato quello di esprime questa superficie efficace.
+                    Aveva capito che il tempo di riverberazione era legato a questo rapporto tra una dimensione volumetrica e una caratteristica bidimensionale.
+                    <br>
+                    <br>
+                    Se tutti gli α fossero uguli ad 1
                   </p>
                 </div>
             </div>
