--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -115,7 +115,8 @@
                           </ul>
                         <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html"><b>04. Approccio Statistico</b></a></li>
                         <ul>
-                            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html"><b>04.01. Formula di Sabine</b></a></li>                  </p>
+                            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html"><b>04.01. Formula di Sabine</b></a></li> 
+                  </p>
               </div>
           </div>
       </div>
