--- a/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
@@ -85,10 +85,11 @@
                     <br>
                     <br>
                     V = volume
+                    <br>
                     Se = superficie di assorbimento efficace (ovvero la somma di tutte le superfici di assorbimento pesate con il loro coefficente di assorbimento)
                     <br>
                     <br>
-                    (m^3/m^2) * s/m = s
+                    <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">s/m * (m^3/m^2) = s</h3>
                     <br>
                     <br>
                     RT60 è definito da un rapporto tra un volume e una superficie.
