--- a/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
@@ -83,14 +83,12 @@
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">RT60 = (0.16 s/m) V/Se</h3>
                   <p class="mbr-text mbr-fonts-style display-7">
                     <br>
-                    <br>
                     V = volume
                     <br>
                     Se = superficie di assorbimento efficace (ovvero la somma di tutte le superfici di assorbimento pesate con il loro coefficente di assorbimento)
                     <br>
                     <br>
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">s/m * (m^3/m^2) = s</h3>
-                    <br>
                     <br>
                     RT60 è definito da un rapporto tra un volume e una superficie.
                     <br>
@@ -106,7 +104,13 @@
         </div>
     </section>
 
+artitura una parte con solo delle forme trattegiate puntinate, e una parte lucidi perchè vanno sovrapposte in un certo modo per creare partitura ogni volta diversa.
 
+200g
+
+prevede che tu abbia le cartucce a 78 giri testine magnetiche, sostituito con i piezo attaccando morsetti degli speaker delle casse e ci stringo dentro gli oggetti
+
+time basket = tempo arbitrario
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
