--- a/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_00_approccio_statistico.html
@@ -86,7 +86,7 @@
                     <br>
                     <br>
                     Uno dei primi studi fu quello del tempo di riverbero, ovvero di una relazione che permettesse di ricavare un parametro importante come il riverbero attraverso parametri complessivi dello spazio.
-                    La formula in questione è la <b>formula di Sabine</b>, di cui vedremo esiti e risultati finali.
+                    La formula in questione è la <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html"><b>formula di Sabine</b></a>, di cui vedremo esiti e risultati finali.
                   </p>
                 </div>
             </div>
