--- a/pages/learn.html
+++ b/pages/learn.html
@@ -153,6 +153,22 @@
                                                 </div>
                                             </div>
                         <!-- new Cards-->
+
+                        <!-- new Cards-->
+                                            <div class="item features-image сol-12 col-md-6 col-lg-3">
+                                                <div class="item-wrapper">
+                                                    <div class="item-img">
+                                                        <img src="https://www.gabrielavelitch.com/img/site/acustica_degli_ambienti_musicali.webp" data-slide-to="0" data-bs-slide-to="0">
+                                                    </div>
+                                                    <div class="item-content">
+                                                        <h5 class="item-title mbr-fonts-style display-7">
+                                                          <br><strong>Acustica degli Strumenti Musicali</strong></h5>
+                                                    </div>
+                                                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming Soon
+                                                            &gt;</a></div>
+                                                </div>
+                                            </div>
+                        <!-- new Cards-->
                       </div>
                   </div>
               </div>
