--- a/pages/learn/tecniche_di_analisi_compositiva.html
+++ b/pages/learn/tecniche_di_analisi_compositiva.html
@@ -2,16 +2,6 @@
 <html>
 <head>
 
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0MB26WWVES"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-0MB26WWVES');
-</script>
-
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -19,7 +9,7 @@
   <meta name="description" content="">
 
 
-  <title>Analisi</title>
+  <title>Tecniche di Analisi Compositiva</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -82,7 +72,7 @@
           <div class="card col-12 col-lg-10">
               <div class="card-wrapper">
                   <div class="card-box align-center">
-                      <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>ANALISI</strong></h4>
+                      <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>TECNICHE DI ANALISI COMPOSITIVA</strong></h4>
                   </div>
               </div>
           </div>
