--- a/pages/learn.html
+++ b/pages/learn.html
@@ -198,7 +198,7 @@
                                                       </div>
                                                       <div class="item-content">
                                                           <h5 class="item-title mbr-fonts-style display-7">
-                                                            <br><strong>Analisi Compositiva</strong></h5>
+                                                            <br><strong>Tecniche di Analisi Compositiva</strong></h5>
                                                       </div>
                                                       <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/tecniche_di_analisi_compositiva.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                                                               &gt;</a></div>
