--- a/pages/learn.html
+++ b/pages/learn.html
@@ -126,7 +126,7 @@
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_1" aria-expanded="false" aria-controls="collapse1">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Acoustic (1)</strong></h6>
+                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Acoustic (2)</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
@@ -178,7 +178,7 @@
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingTwo">
                                   <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis (2)</strong></h6>
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Performance and Interpretation of Electroacoustic Music (3)</strong></h6>
                                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                   </a>
                               </div>
