--- a/pages/learn.html
+++ b/pages/learn.html
@@ -228,7 +228,7 @@
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingThree">
                                   <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse3_3" aria-expanded="false" aria-controls="collapse3">
-                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Musical Digital Technologies (1)</strong></h6>
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Digital Music Technologies (1)</strong></h6>
                                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                   </a>
                               </div>
