--- a/pages/learn.html
+++ b/pages/learn.html
@@ -123,6 +123,8 @@
                   <div class="col-12 col-md-10">
                       <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
 
+
+<!-- Acoustic Cards Grid-->
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_1" aria-expanded="false" aria-controls="collapse1">
@@ -152,7 +154,7 @@
                                                             &gt;</a></div>
                                                 </div>
                                             </div>
-                        <!-- new Cards-->
+                        <!-- end Cards-->
 
                         <!-- new Cards-->
                                             <div class="item features-image сol-12 col-md-6 col-lg-3">
@@ -168,12 +170,13 @@
                                                             &gt;</a></div>
                                                 </div>
                                             </div>
-                        <!-- new Cards-->
+                        <!-- end Cards-->
                       </div>
                   </div>
               </div>
 </div>
 <!-- end Cards Grid-->
+<!-- Performance and Interpretation of Electroacoustic Music Cards Grid-->
 
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingTwo">
@@ -204,6 +207,7 @@
                                                               &gt;</a></div>
                                                   </div>
                                               </div>
+<!-- end Cards-->
 <!-- new Cards-->
 <div class="item features-image сol-12 col-md-6 col-lg-3">
     <div class="item-wrapper">
@@ -218,12 +222,13 @@
                 &gt;</a></div>
     </div>
 </div>
-
+<!-- end Cards-->
                                   </div>
                               </div>
                           </div>
 </div>
 <!-- end Cards Grid-->
+<!-- Digital Music Technologies Cards Grid-->
 
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingThree">
@@ -253,13 +258,13 @@
                 &gt;</a></div>
     </div>
 </div>
-<!-- new Cards-->
+<!-- end Cards-->
                                   </div>
                               </div>
                           </div>
 </div>
 <!-- end Cards Grid-->
-
+<!-- History Cards Grid-->
                           <div class="card mb-3">
                               <div class="card-header" role="tab" id="headingFour">
                                   <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse4_4" aria-expanded="false" aria-controls="collapse4">
@@ -289,6 +294,7 @@
                                     &gt;</a></div>
                                     </div>
                                     </div>
+                                    <!-- end Cards-->
                                     <!-- new Cards-->
                                     <div class="item features-image сol-12 col-md-6 col-lg-3">
                                     <div class="item-wrapper">
@@ -303,6 +309,7 @@
                                     &gt;</a></div>
                                     </div>
                                     </div>
+                                    <!-- end Cards-->
                                     <!-- new Cards-->
                                     <div class="item features-image сol-12 col-md-6 col-lg-3">
                                         <div class="item-wrapper">
@@ -317,6 +324,7 @@
                                                     &gt;</a></div>
                                         </div>
                                     </div>
+                                    <!-- end Cards-->
                                     <!-- new Cards-->
                                     <div class="item features-image сol-12 col-md-6 col-lg-3">
                                         <div class="item-wrapper">
@@ -331,7 +339,7 @@
                                                     &gt;</a></div>
                                         </div>
                                     </div>
-                                    <!-- new Cards-->
+                                    <!-- end Cards-->
 
                                     </div>
                                     </div>
