--- a/pages/learn.html
+++ b/pages/learn.html
@@ -223,6 +223,21 @@
     </div>
 </div>
 <!-- end Cards-->
+<!-- new Cards-->
+<div class="item features-image сol-12 col-md-6 col-lg-3">
+    <div class="item-wrapper">
+        <div class="item-img">
+            <img src="https://www.gabrielavelitch.com/img/site/analisi_stock.webp" data-slide-to="3" data-bs-slide-to="3">
+        </div>
+        <div class="item-content">
+            <h5 class="item-title mbr-fonts-style display-7">
+              <br><strong>Interpretazione ed Esecuzione di Cartridge Music - John Cage</strong></h5>
+        </div>
+        <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                &gt;</a></div>
+    </div>
+</div>
+<!-- end Cards-->
                                   </div>
                               </div>
                           </div>
