--- a/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html
@@ -185,9 +185,9 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><b>(x)ingresso: segnale</b></li>
-            <li><b>(h)sistema: risposta all'impulso</b></li>
-            <li><b>(y)uscita: convoluzione tra (x) e (h)</b></li>
+            <li><b>(x)ingresso</b>: segnale</li>
+            <li><b>(h)sistema</b>: risposta all'impulso</li>
+            <li><b>(y)uscita</b>: convoluzione tra (x) e (h)</li>
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
             Questo modello è utile a descrivere diverse situazioni, quale per esempio un filtro o uno spazio.
