--- a/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html
+++ b/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html
@@ -127,9 +127,7 @@
                 Possiamo dunque descrivere la <b>(x)</b> con la seguente espressione:
                 <br>
                 <br>
-                <h3 style="text-align:center;">
-                <b>x = t, 𐌘(α, θ), (ρ, α, θ)</b>
-              </h3>
+                <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>x = t, 𐌘(α, θ), (ρ, α, θ)</b></h3>
             </div>
         </div>
     </div>
@@ -148,10 +146,7 @@
               Convolvendo il <b>sistema(h)</b> con <b>l'ingresso(x)</b>, otteniamo <b>l'uscita(y)</b> che possiamo descrivere in questo modo:
               <br>
               <br>
-              <h4 style="text-align:center;">
-              <b>y = t, Γ(α, θ), (ρ, α, θ) = h (G(ρ, α, θ), M(ρ, α, θ)) * x (t, 𐌘(α, θ), (ρ, α, θ))</b>
-            </h4>
-            <br>
+              <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>y = t, Γ(α, θ), (ρ, α, θ) = h (G(ρ, α, θ), M(ρ, α, θ)) * x (t, 𐌘(α, θ), (ρ, α, θ))</b></h3>
             <br>
             <ul>
             <li><b>(Γ)funzione di sensibilità che descrive la ricettività</b></li>
