--- a/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
@@ -95,15 +95,30 @@
                     <br>
                     Il contributo dato da Sabine è stato quello di esprime questa superficie efficace.
                     Aveva capito che il tempo di riverberazione era legato a questo rapporto tra una dimensione volumetrica e una caratteristica bidimensionale.
-                    <br>
-                    <br>
-                    Se tutti gli α fossero uguali ad 1
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                  <h3>Problemi della Formula di Sabine</h3>
+                  <br>
+                <p class="mbr-text mbr-fonts-style display-7">
+                <ul>
+                  <li>se alfa(i) = 1 -> T60 diverso da 0</li>
+                  <li>se alfa(i) >> 0 -> T60 sovrastimato</li>
+                  <li>non considera assorbimento aria</li>
+                </ul>
+              </p>
+              </div>
+          </div>
+      </div>
+  </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
