--- a/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
@@ -90,6 +90,7 @@
                     <br>
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>s/m * (m^3/m^2) = s</b></h3>
                     <br>
+                    <p class="mbr-text mbr-fonts-style display-7">
                     RT60 è definito da un rapporto tra un volume e una superficie.
                     <br>
                     <br>
