--- a/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
@@ -83,6 +83,8 @@
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>RT60 = (0.16 s/m) V/Se</b></h3>
                   <p class="mbr-text mbr-fonts-style display-7">
                     <br>
+                    <b>RT60</b> = tempo di riverberazione, quando il suono il suono decade a 60dB rispetto al livello originale
+                    <br>
                     <b>V</b> = volume
                     <br>
                     <b>Se</b> = superficie di assorbimento efficace (ovvero la somma di tutte le superfici di assorbimento pesate con il loro coefficente di assorbimento)
