--- a/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html
@@ -90,12 +90,12 @@
                     <b>Se</b> = superficie di assorbimento efficace (ovvero la somma di tutte le superfici di assorbimento pesate con il loro coefficente di assorbimento)
                     <br>
                     <br>
+                    RT60 è definito da un rapporto tra un volume e una superficie:
+                    <br>
+                    <br>
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>s/m * (m^3/m^2) = s</b></h3>
                     <br>
                     <p class="mbr-text mbr-fonts-style display-7">
-                    RT60 è definito da un rapporto tra un volume e una superficie.
-                    <br>
-                    <br>
                     Il contributo dato da Sabine è stato quello di esprime questa superficie efficace.
                     Aveva capito che il tempo di riverberazione era legato a questo rapporto tra una dimensione volumetrica e una caratteristica bidimensionale.
                   </p>
