--- a/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html
@@ -104,8 +104,10 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Per piccoli valori dei coefficienti di assorbimento la <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html"><b>formula di Sabine</b></a> e quella di Norris-Eyring sostanzialmente coincidono, per valori più grandi invece la relazione Norris-Eyring ci restituisce dei tempi più vicini alla realtà.
-
+            Per piccoli valori dei coefficienti di assorbimento la <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html"><b>formula di Sabine</b></a> e quella di Norris-Eyring sostanzialmente coincidono, per valori più grandi invece la relazione Norris-Eyring ci restituisce dei tempi più vicini alla realtà, correggendo di fatto la formula di Sabine.
+            <br>
+            <br>
+            Anche questa formula non tiene conto dell'assorbimento dell'aria.
           </p>
         </div>
       </div>
