--- a/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html
@@ -97,6 +97,19 @@
     </div>
   </section>
 
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+  <div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-12 col-lg-5">
+        <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/20_sabine.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing</p>
+        </div>
+    </div>
+  </div>
+  </div>
+  </section>
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
@@ -104,7 +117,8 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Per piccoli valori dei coefficienti di assorbimento la <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html"><b>formula di Sabine</b></a> e quella di Norris-Eyring sostanzialmente coincidono, per valori più grandi invece la relazione Norris-Eyring ci restituisce dei tempi più vicini alla realtà, correggendo di fatto la formula di Sabine.
+            Per piccoli valori dei coefficienti di assorbimento la <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html"><b>formula di Sabine</b></a> e quella di Norris-Eyring sostanzialmente
+            coincidono, per valori più grandi invece la relazione Norris-Eyring ci restituisce dei tempi più vicini alla realtà, correggendo di fatto la formula di Sabine.
             <br>
             <br>
             Anche questa formula non tiene conto dell'assorbimento dell'aria.
@@ -120,7 +134,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html">&lt; Previous</a>
             <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
