--- a/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html
@@ -99,16 +99,16 @@
 
   <!-- Image-->
   <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-  <div class="container-fluid">
-  <div class="row justify-content-center">
-    <div class="col-12 col-lg-5">
-        <div class="image-wrapper">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/20_sabine.webp" alt="www.gabrielavelitch.com">
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing</p>
+          </div>
         </div>
+      </div>
     </div>
-  </div>
-  </div>
   </section>
 
   <!-- Text-->
@@ -135,7 +135,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
           <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_filtraggio_dell_aria.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
