--- a/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html
@@ -104,7 +104,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/20_sabine.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
           </div>
         </div>
       </div>
