--- a/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html
@@ -121,7 +121,7 @@
             coincidono, per valori più grandi invece la relazione Norris-Eyring ci restituisce dei tempi più vicini alla realtà, correggendo di fatto la formula di Sabine.
             <br>
             <br>
-            Anche questa formula non tiene conto del <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_filtraggio_dell_aria.html"><b>filtraggio dell'aria</b></a>.
+            Anche questa formula però non tiene conto del <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_filtraggio_dell_aria.html"><b>filtraggio dell'aria</b></a>.
           </p>
         </div>
       </div>
