--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -127,7 +127,8 @@
             <ul>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_01_formula_di_sabine.html"><b>04.01. Formula di Sabine</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html"><b>04.02. Formula di Norris-Eyring</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_filtraggio_dell_aria.html"><b>04.03. Filtraggio dell'Aria</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html"><b>04.03. Attenuazione Dovuta alla Propagazione</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html"><b>04.04. Filtraggio dell'Aria</b></a></li>
               </p>
         </div>
       </div>
