--- a/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Filtraggio dell'Aria</title>
+  <title>Attenuazione Dovuta alla Propagazione</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Acustica degli Ambienti Musicali</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Filtraggio dell'Aria</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Attenuazione Dovuta alla Propagazione</strong></h4>
             </div>
         </div>
     </div>
@@ -106,7 +106,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
