--- a/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html
@@ -92,8 +92,8 @@
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
                     Un altro problema della simulazione dello spazio acustico è l'attenuazione dovuta alla propagazione.
-                    Volendo simulare la risposta di uno spazio acustico con sorgente ed ascoltatore in due punti diversi, potrei applicare il metodo delle sorgenti virtuali e per ognuna di esse applicare l'attenuazione dovuta alla propagazione.
-                    
+                    Volendo simulare la risposta di uno spazio acustico con sorgente ed ascoltatore in due punti diversi, potrei applicare il metodo delle <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html"><b>sorgenti virtuali</b></a> e per ognuna di esse applicare l'attenuazione dovuta alla propagazione.
+
                   </p>
                 </div>
             </div>
