--- a/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html
@@ -113,7 +113,7 @@
             In realtà questa tipologia di calcolo è spannometrica: la distanza tende ad infinito quando r sta a 0, fatto non reale.
             <br>
             <br>
-            La formula valida per una corretta valutazione dell'attenuazione dovuta alla propagazione è descritta utilizzando considerazioni geometriche:
+            La formula valida per una corretta valutazione dell'attenuazione dovuta alla propagazione è invece descritta utilizzando considerazioni geometriche:
           </p>
         </div>
       </div>
