--- a/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html
@@ -105,8 +105,7 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Un altro problema della simulazione dello spazio acustico è l'attenuazione dovuta alla propagazione.
-            Volendo simulare la risposta di uno spazio acustico con sorgente ed ascoltatore in due punti diversi, potrei applicare il metodo delle <a
-              href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html"><b>sorgenti virtuali</b></a> e per ognuna di esse applicare l'attenuazione dovuta alla propagazione.
+            Volendo simulare la risposta di uno spazio acustico con sorgente ed ascoltatore in due punti diversi, potrei applicare il metodo delle <a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/03_02_sorgenti_virtuali.html"><b>sorgenti virtuali</b></a> e per ognuna di esse applicare l'attenuazione dovuta alla propagazione.
             <br>
             <br>
             La legge quadratica inversa classica è una soluzione semplificata al problema.
@@ -120,6 +119,20 @@
     </div>
   </section>
 
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/21_inverse_square_law.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"><a href="http://hyperphysics.phy-astr.gsu.edu/hbase/Acoustic/invsqs.html#c1"><b>Inverse Square Law - www.hyperphysics.phy</b></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Image-->
   <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
