--- a/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html
@@ -109,10 +109,6 @@
             <br>
             <br>
             La legge quadratica inversa classica è una soluzione semplificata al problema.
-            In realtà questa tipologia di calcolo è spannometrica: la distanza tende ad infinito quando r sta a 0, fatto non reale.
-            <br>
-            <br>
-            La formula valida per una corretta valutazione dell'attenuazione dovuta alla propagazione è invece descritta utilizzando considerazioni geometriche:
           </p>
         </div>
       </div>
@@ -133,6 +129,23 @@
       </div>
     </div>
   </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            In realtà questa tipologia di calcolo è spannometrica: la distanza tende ad infinito quando r sta a 0, fatto non reale.
+            <br>
+            <br>
+            La formula valida per una corretta valutazione dell'attenuazione dovuta alla propagazione è invece descritta utilizzando considerazioni geometriche:
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- Image-->
   <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
