--- a/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html
@@ -132,7 +132,7 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Già a 6 metri di distanza la frequenza di taglio è in banda audio. A distanza di 1 km, con ritardo di 3 secondi, la frequenza del polo è intorno ai 600Hz, a 5000Hz ho un'attenuazione di 44dB.
-            In generale ció vuol dire che tutte le riflessioni che superano i 3 secondi sono filtrate da filtro passa basso a 600Hz.
+            In generale ció vuol dire che tutte le riflessioni che superano i 3 secondi sono filtrate da filtro passa basso a 600Hz. Il filtraggio dell'aria tiene conto anchedell'uniditù, se aumenta l'umidità aumenta l'effetto di attenuazione.
           </p>
         </div>
       </div>
