--- a/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html
@@ -104,7 +104,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Analizziamo la legge di dipendenza dell'assorbimento dell'aria dalla frequenza attraverso l'implementazione di un filtro passa basso ad un polo che abbia la frequenza di taglio variabile in funzione della distanza.
+            Possiamo simulare la legge di dipendenza dell'assorbimento dell'aria dalla frequenza attraverso l'implementazione di un filtro passa basso ad un polo che abbia la frequenza di taglio variabile in funzione della distanza.
           </p>
         </div>
       </div>
