--- a/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html
@@ -104,7 +104,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Possiamo simulare la legge di dipendenza dell'assorbimento dell'aria dalla frequenza attraverso l'implementazione di un filtro passa basso ad un polo che abbia la frequenza di taglio variabile in funzione della distanza.
+            Possiamo simulare la legge di dipendenza dell'assorbimento dell'aria dalla frequenza attraverso l'implementazione di un <b>filtro passa basso ad un polo</b> che abbia la frequenza di taglio variabile in funzione della distanza.
           </p>
         </div>
       </div>
@@ -133,6 +133,9 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Già a 6 metri di distanza la frequenza di taglio è in banda audio. A distanza di 1 km, con ritardo di 3 secondi, la frequenza del polo è intorno ai 600Hz, a 5000Hz ho un'attenuazione di 44dB.
             In generale ció vuol dire che tutte le riflessioni che superano i 3 secondi sono filtrate da filtro passa basso a 600Hz. Il filtraggio dell'aria tiene conto anchedell'uniditù, se aumenta l'umidità aumenta l'effetto di attenuazione.
+            <br>
+            <br>
+            Quando passiamo un impulso di dirac dentro ad un filtro passa basso quello che esce fuori non è più un impulso ma somiglia molto più ad una campana.
           </p>
         </div>
       </div>
