--- a/pages/learn/acustica_degli_ambienti_musicali.html
+++ b/pages/learn/acustica_degli_ambienti_musicali.html
@@ -129,7 +129,8 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_02_formula_di_norris_eyring.html"><b>04.02. Formula di Norris-Eyring</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html"><b>04.03. Attenuazione Dovuta alla Propagazione</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html"><b>04.04. Filtraggio dell'Aria</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_05_tempo_di_riverberzione_tramite_risposta_all_impulso.html"><b>04.05. Tempo di Riverberazione Tramite Risposta all'Impulso</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_05_formula_di_sabine_con_filtraggio_dell_aria.html"><b>04.05. Formula di Sabine con Filtraggio dell'Aria</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html"><b>04.06. Tempo di Riverberazione Tramite Risposta all'Impulso</b></a></li>
               </p>
         </div>
       </div>
