--- a/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_04_filtraggio_dell_aria.html
@@ -151,7 +151,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
           <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_03_attenuazione_dovuta_alla_propagazione.html">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/04_05_formula_di_sabine_con_filtraggio_dell_aria.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
