--- a/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
@@ -84,6 +84,20 @@
     </div>
 </section>
 
+<!-- Image-->
+<section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-5">
+        <div class="image-wrapper">
+          <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/timerev.webp" alt="www.gabrielavelitch.com">
+          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Ray Tracing</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
@@ -91,7 +105,7 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Da questo grafico denotiamo i vari tempi di riverberazione. I valori sono stati ottenuti dal campionamento di varie sale da concerto.
                   </p>
                 </div>
             </div>
