--- a/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
@@ -153,6 +153,12 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Sulle ordinate abbiamo i dB, mentre sulle ascisse abbiamo i ms di RT60.
+            <br>
+            <br>
+            Possiamo notare che, in quanto rappresentazione esponenziale, questo grafico esprime una retta. La pendenza della retta è il coefficente della x.
+            <br>
+            <br>
+            Questa retta mi da un'idea di come avviene la decrescita degli RT60. Scopriamo dunque che questi decrescono esponenzialmente.
         </div>
       </div>
     </div>
