--- a/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
@@ -121,9 +121,11 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Da questo grafico denotiamo i vari tempi di riverberazione. I valori sono stati ottenuti dal campionamento di varie sale da concerto.
           </p>
-          <h3 class="mbr-text mbr-fonts-style display-7">RT60</h3>
+          <h3>RT60</h3>
           <br>
-          Esso è il tempo necessario affinchè la risposta all'impulso decada di 60dB.
+          <p class="mbr-text mbr-fonts-style display-7">
+            Esso è il tempo necessario affinchè la risposta all'impulso decada di 60dB.
+          </p>
         </div>
       </div>
     </div>
