--- a/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
@@ -161,6 +161,9 @@
             <br>
             <br>
             Questa retta mi da un'idea di come avviene la decrescita degli RT60. Scopriamo dunque che questi decrescono esponenzialmente.
+            <br>
+            <br>
+            Tramite l'angolo di questa retta posso ricavarmi RT60.
         </div>
       </div>
     </div>
