--- a/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
@@ -221,8 +221,8 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/cumul.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">T10, T20 e T30
+            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/23_edt.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">
             </p>
           </div>
         </div>
@@ -236,9 +236,6 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Se estrapolo il segmento di retta e ne prendo il tempo e lo moltiplico per 6 ottengo l'EDT.
-            <br>
-            <br>
             L'EDT ricavato da una caduta di 10dB ma viene confrontato con RT60, l'EDT ha lo scopo di capire qual'è l'uniformità tra il profilo di decadimento delle prime riflessioni ed il profilo di decadimento della risposta diffusa.
             <br>
             <br>
